--- a/root/index.html
+++ b/root/index.html
@@ -42,8 +42,12 @@
         <div class="container">
             <div class="starter-template">
                 <div class="row">
-                    <span class="col-md-12">
+                    <span class="col-md-6">
                         <img src="assets/images/gebo.jpg" />
+                    </span>
+                    <span class="col-md-6">
+                        <div id="hello">
+                        </div>
                     </span>
                 </div>
             </div>
@@ -52,14 +56,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
         <!-- build:js {%= name %}.min.js --> 
-        <script type="text/jsx" src="scripts/constants.js"></script>
-        <script type="text/jsx" src="scripts/estimate.js"></script>
-        <script type="text/jsx" src="scripts/getTimeMessage.js"></script>
-        <script type="text/jsx" src="scripts/convert.js"></script>
-        <script type="text/jsx" src="scripts/Timeout.js"></script>
-        <script type="text/jsx" src="scripts/FileSelector.js"></script>
-        <script type="text/jsx" src="scripts/FormatSelector.js"></script>
-        <script type="text/jsx" src="scripts/ConverterBox.js"></script>
+        <script type="text/jsx" src="scripts/HelloWorld.js"></script>
         <!-- endbuild -->
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
