--- a/root/index.html
+++ b/root/index.html
@@ -29,14 +29,8 @@
                     </button>
                     <a class="navbar-brand" href="#">{%= name %}</a>
                 </div>
-                <!--
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div>/.nav-collapse -->
+                <div id="authenticate">
+                </div>
             </div>
         </div>
         <div class="container">
@@ -56,6 +50,14 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
         <!-- build:js {%= name %}.min.js --> 
+        <script type="text/jsx" src="scripts/config.js"></script>
+        <script type="text/jsx" src="scripts/gebo/formatPopupOptions.js"></script>
+        <script type="text/jsx" src="scripts/gebo/objectToQueryString.js"></script>
+        <script type="text/jsx" src="scripts/gebo/getTokenByPopup.js"></script>
+        <script type="text/jsx" src="scripts/gebo/verifyToken.js"></script>
+        <script type="text/jsx" src="scripts/gebo/logout.js"></script>
+        <script type="text/jsx" src="scripts/gebo/Authenticate.js"></script>
+        <script type="text/jsx" src="scripts/gebo/AuthenticateMenu.js"></script>
         <script type="text/jsx" src="scripts/HelloWorld.js"></script>
         <!-- endbuild -->
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
