--- a/root/action.html
+++ b/root/action.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="{%= description %}">
-        <meta name="author" content="{%= author_name %}">
-        <title>{%= name %}</title>
+        <meta name="description" content="The best project ever.">
+        <meta name="author" content="RaphaelDeLaGhetto">
+        <title>test</title>
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
         <link href="assets/css/starter-template.css" rel="stylesheet">
         <script src="http://fb.me/react-0.10.0.js"></script>
@@ -27,7 +27,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/">{%= name %}</a>
+                    <a class="navbar-brand" href="/">test</a>
                 </div>
                 <div id="authenticate">
                 </div>
@@ -46,18 +46,18 @@
         <!-- Bootstrap core JavaScript -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-        <!-- build:js {%= name %}.min.js --> 
+        <!-- build:js test.min.js --> 
         <script type="text/jsx" src="scripts/config.js"></script>
         <script type="text/jsx" src="scripts/gebo/formatPopupOptions.js"></script>
         <script type="text/jsx" src="scripts/gebo/objectToQueryString.js"></script>
         <script type="text/jsx" src="scripts/gebo/getTokenByPopup.js"></script>
         <script type="text/jsx" src="scripts/gebo/verifyToken.js"></script>
         <script type="text/jsx" src="scripts/gebo/logout.js"></script>
+        <script type="text/jsx" src="scripts/gebo/sendFormDataMessage.js"></script>
         <script type="text/jsx" src="scripts/gebo/Authenticate.js"></script>
         <script type="text/jsx" src="scripts/gebo/AuthenticateMenu.js"></script>
-        <script type="text/jsx" src="scripts/HelloWorld.js"></script>
-        <script type="text/jsx" src="scripts/Interface.js"></script>
         <!-- endbuild -->
+        <script type="text/jsx" src="scripts/Interface.js"></script>
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
     </body>
