Change sendFormDataMessage to perform

--- a/root/index.html
+++ b/root/index.html
@@ -70,7 +70,7 @@
         <script type="text/jsx" src="scripts/gebo/getTokenByPopup.js"></script>
         <script type="text/jsx" src="scripts/gebo/verifyToken.js"></script>
         <script type="text/jsx" src="scripts/gebo/logout.js"></script>
-        <script type="text/jsx" src="scripts/gebo/sendFormDataMessage.js"></script>
+        <script type="text/jsx" src="scripts/gebo/perform.js"></script>
         <script type="text/jsx" src="scripts/gebo/Authenticate.js"></script>
         <script type="text/jsx" src="scripts/gebo/AuthenticateMenu.js"></script>
         <script type="text/jsx" src="scripts/HelloWorld.js"></script>
